--- a/src/sass/layout/nav.scss
+++ b/src/sass/layout/nav.scss
@@ -12,14 +12,24 @@
     width: 100%;
     min-height: 75px;
     font-weight: $font-weight-regular;
+    z-index: 3;
+
+    &__logo{
+        font-size: 1.2rem;
+        padding: 0 0.3rem;
+        letter-spacing: 1.5px;
+        color:inherit;
+    }
 
     &__links{
         display: flex;
-        gap: 0.4rem;
+        gap: 40px;
     }
 
     &__link{
+        font-size: 1.2rem;
         padding: 0 0.3rem;
+        letter-spacing: 1.5px;
         color:inherit;
         &:hover{
             font-weight: $font-weight-medium;
