--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -1,16 +1,59 @@
+@use '../abstracts/variables.scss' as *;
 .home{
-    background: red;
+    background: $bg-color-body;
 }
 
-.img-wrapper{
-    background: blueviolet;
-    height: 300px;
-    width: 500px;
-    border-radius: 1rem;
+.main__section{
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-    img{
-        object-fit: cover;
-        width: 100%;
-        border-radius: 1rem;box-shadow: 5px 5px 10px rgba(0, 0, 0, .3);
+    h2 {
+        margin: 25px 0;
+        font-size: 3rem;
+        text-align: center;
     }
+
+    &.works, &.contact, &.about{
+        padding: 50px 0
+    }
+
+    &.works, &.contact{
+        background: $bg-color-body;
+        p{
+            text-align: justify;
+            line-height: 1.5;
+            font-size: 1rem;
+        }
+    }
+
+     &.works{
+        h2,p{
+            max-width: 1440px;
+                width: 80%;
+                color: $blue-green;
+        }
+        .worksList{
+            max-width: 1440px;
+            width: 80%;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            justify-content: space-evenly;
+            grid-gap: 100px;
+            margin: 50px 0;
+        }
+     }
+
+     &.about{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+     }
+     &.contact{
+        h2{
+            color: #D64045;
+        }
+     }
 }
