--- a/src/sass/components/button.scss
+++ b/src/sass/components/button.scss
@@ -10,14 +10,14 @@
   display: inline-block;
   margin: 30px auto;
   cursor: pointer;
-  color: black;
-  border: 2px solid #262626;
+  color: $font_color;
+  border: 2px solid $font_color;
 
   &:visited {
-    color: black;
+    color: $font_color;
   }
   &:hover{
-    transition: all .3s ease;
+    transition: all .4s ease-in-out;
   }
 
 }
@@ -32,14 +32,24 @@
     color: white;
   }
 }
+.blue-green {
+  border: 2px solid $blue-green;
+  color: $blue-green;
 
-.black {
+  &:hover{
+    border: 2px solid $blue-green;
+    background-color: $blue-green;
+    color: white;
+  }
+}
+
+.white {
  background-color: transparent;
 
   &:hover{
-    border: 2px solid #D64045;
-    background-color: #D64045;
-    color: white;
+    border: 2px solid transparent;
+    background-color: $blue-green;
+    color: $font_color;
   }
 }
 
