--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -56,7 +56,10 @@
      }
      &.contact{
         h2{
-            color: #D64045;
+            color: $blue-green;
+        }
+        p{
+            text-align: center;
         }
      }
 }
