--- a/src/sass/layout/nav.scss
+++ b/src/sass/layout/nav.scss
@@ -10,6 +10,7 @@
     padding: 1rem;
     position: fixed;
     width: 100%;
+    top: 0;
     min-height: 75px;
     font-weight: $font-weight-regular;
     z-index: 3;
